# data_analytics_engineering

./: .gitignore  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml
analyses/: most_valuable_customers.sql
data_platform/: README.md  dbt_project.yml  dbt_project.yml.bak
data_platform/models/marts/: _mart_documentation.yml
data_platform/models/marts/core/: dim_customers.sql  dim_date.sql  dim_geography.sql  dim_products.sql  dim_sellers.sql  fact_orders.sql
data_platform/models/marts/customer_analytics/: fact_customer_behavior.sql
data_platform/models/marts/finance/: fact_daily_financials.sql  finance_kpis.sql
data_platform/models/marts/logistic/: fact_order_fulfillment.sql  logistics_kpis.sql
data_platform/models/marts/sales/: fact_sales_daily.sql
data_platform/models/metrics/: README.md  metricflow_time_spine.sql  metrics.yml  schema.yml
data_platform/models/semantics/: semantic_models.yml
data_platform/models/staging/ecommerce/: _olist_sources.yml  stg_categories.sql  stg_customers.sql  stg_geolocations.sql  stg_order_items.sql  stg_order_overviews.sql  stg_order_payments.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
etl/: config.yml  extract.py  load.py  pipeline.py  transform.py
models/marts/core/: _core_models.yml  dim_customers.sql  fct_orders.sql
models/staging/jaffle_shop/: _jaffle_shop_models.yml  _jaffle_shop_sources.yml  stg_jaffle_shop_customers.sql  stg_jaffle_shop_orders.sql
models/staging/stripe/: stg_stripe_order_payments.sql
prompts/: marts.md
scripts/: dbt_run_safe.sh
